--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "loadsh": "^0.0.4",
+    "lodash.throttle": "^4.1.1",
     "nuxt": "^2.15.3",
     "vuex-module-decorators": "^1.0.1"
   },
@@ -23,6 +25,7 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@types/lodash.throttle": "^4.1.6",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
